Fixbug cache restore fail main issue is on DTO without @NoArgsConstructor @AllArgsConstructor
Jackson/GenericJackson2JsonRedisSerializer ไม่สามารถ deserialize จาก JSON กลับมาเป็น DTO ได้

Refactor order search to use PageResponse for pagination and update Redis cache configuration